# course-ScientificProgramming

./: .gitignore  README.md  _clang-format
AA2018-2019/lesson1/: example1.c  example2.c  example3.c  example6.c
AA2018-2019/lesson10/src_mex/: CompileLib.m  mex_CubicSegment2.cc  mex_utils.hh
AA2018-2019/lesson2/: Eratosthenes3.c  Eratosthenes4.c
AA2018-2019/lesson3/: Eratosthenes5.c  bitvec.c  makefile  pointer_example2.c  prova.txt
AA2018-2019/lesson4/: makefile  polynom.h  runme
AA2018-2019/lesson6/: polynoms.hpp  test2.cpp  test3.cpp
AA2018-2019/lesson7/: 1_bubble_sort.cc  2_link_with_fortran_b.f  6_test_vector.cc  9_exception.cc  TimeMeter.cc
AA2018-2019/lesson8/: 2_partial_specialization.cc  3_bntrick.cc  4_bvp.cc  makefile  result.txt
AA2018-2019/lesson8/GRLIB/: GrDriver.cc  GrDriver.hh  GrGraph.cc  GrGraph.hh  GrObject.cc  PsDriver.cc  PsDriver.hh  main.cc  prova.ps
AA2018-2019/lesson9/: P.m  mex_bvp.cc  mex_bvp1.cc  mex_bvp2.cc
AA2018-2019/students-projects/Davide_Vignotto-Alessandro_Antonucci-Rubik_Cube/: main.cpp
AA2018-2019/students-projects/Manuel_Bolder-Graph_and_algorithms/: k6  main.cpp
AA2021-2022/lesson3/C++-version/: main.cc  power.cc  power.hh
AA2021-2022/lesson3/C-version/: main.c
AA2021-2022/lesson3/Template1-version/: main.cc  power.hh
AA2021-2022/lesson4/: main.cc
AA2021-2022/lesson4/C++1-version/: main.cc  vector.cc  vector.hh
AA2021-2022/lesson4/C++2-version/: main.cc  vector.cc  vector.hh
AA2021-2022/lesson4/C++3-version/: main.cc  vector.cc
AA2021-2022/lesson4/C++5-version/: main.cc  vector.hh
AA2021-2022/lesson4/C-version/: main.c
AA2021-2022/lesson5/: test1.cc
AA2021-2022/lesson6/interface1/: Compile.m  test1.m  test2.m
AA2021-2022/lesson6/rect-2/: rect.m
AA2021-2022/lesson6/rect-3/: mexRectWrapper.cc
AA2021-2022/lesson6/rect-4/: mexRectWrapper.cc
AA2021-2022/lesson6/rect-5/: rect.hh
AA2021-2022/lesson7/: 2_Eigen.cc  3_partial_specialization.cc  6_auto.cc  CMakeLists.txt
AA2021-2022/lesson8/: 2_exception.cc  5_thread_c++11-ver2.cc  6_thread_c++11-ver3.cc  CMakeLists.txt
AA2023-2024/FTXUI-5.0.0/: CMakeLists.txt
AA2023-2024/MyBlockMult/: CMakeLists.txt  Makefile  ThreadPool1.cc  ThreadPool1.hh  ThreadUtils.cc  block_multiplication  block_multiplication.cpp  block_multiplication.hh  block_multiplication_main.cpp  cmake_install.cmake  my_block_multiplication.cpp  my_block_multiplication.hh
AA2023-2024/lesson1/example1/: example1_1  example1_1.cc
AA2023-2024/lesson1/example2/: Makefile  example2_1
AA2023-2024/lesson1/example4/: CMakeLists.txt  Eratosthenes1.cc  Eratosthenes2.cc  Sieve.cc  Sieve.hh
AA2023-2024/lesson2/example1/: CMakeLists.txt  ex1.cc  ex2.cc  ex3.cc  ex4.cc  ex5.cc  ex6.cc  ex7.cc
AA2023-2024/lesson2/sodoku/: CMakeLists.txt  problem.txt  sodoku_read.cc  sodoku_write.cc
AA2023-2024/lesson2/sudoku/: CMakeLists.txt  Sudoku  sudoku_main.cc  sudoku_solve.cc  sudoku_write.cc
AA2023-2024/lesson4/MatrixMultiplicationThreads/: .gitignore  CMakeLists.txt  test_MatrixMultThreadpool
AA2023-2024/lesson4/MatrixMultiplicationThreads/include/: BlockMult.hh  timer.hh
AA2023-2024/lesson4/MatrixMultiplicationThreads/src/: BlockMult.cc  MatrixMult.cc
AA2023-2024/lesson4/MatrixMultiplicationThreads/src/include/: BlockMult.hh  MatrixMult.hh
AA2023-2024/lesson4/MatrixMultiplicationThreads/src_test/: test_MatrixMultThreadpool.cc
AA2023-2024/lesson4/MatrixMultiplicationThreads/src_tests/: test_MatrixMultThreadpool.cc
AA2023-2024/lesson4/MatrixMultiplicationThreads/thread-pool-unitn/: ThreadPool1.hh  ThreadUtils.hxx
AA2023-2024/lesson4/example2/: CMakeCache.txt  CMakeLists.txt  Makefile  ThreadPool1.hh  ThreadPoolBase.hxx  ThreadUtils.hxx  block_multiplication  block_multiplication.cpp  cmake_install.cmake
AA2023-2024/lesson5/example1/: CMakeLists.txt  test_LS1  test_LS1b  test_LS1b.cc  test_LS2  test_LS2b.cc
AA2023-2024/lesson5/example2/: CMakeLists.txt
AA2023-2024/lesson5/example2/include/: LS.hh
AA2023-2024/lesson5/example2/src/: LS_QR_solve.cc
AA2023-2024/lesson5/example3/: CMakeLists.txt
AA2023-2024/lesson6/example1/: CMakeLists.txt
AA2023-2024/lesson6/example1/src_tests/: test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc
lesson1/: Eratosthenes1.c  Eratosthenes2.c  Eratosthenes3.c  Eratosthenes4.c  example4.c  example5.c  example6.c  example7.c  exercize.c
lesson10/: BaseHermite.m  CubicSegment.m  test.m
lesson10/matlab/: test.m
lesson10/src_mex/: CubicSegment2.m
lesson2/: Eratosthenes1.c  Eratosthenes2.c  bit_manipulation.c
lesson3/: bitvec.h  pointer_example.c  pointer_example2.c  pointer_example3.c  struct_example.c  struct_example2.c
lesson3/C-version/: power.c  power.h  test
lesson3/Template2-version/: power.cc  power.hh
lesson4/: polynom.c  polynom.h  runme  test.c  testGCD.c  testMCD.c  testSTURM.c
lesson4/C++3-version/: vector.hh
lesson4/C++5-version/: vector.cc
lesson4/C-version/: vector.c  vector.h
lesson5/: CMakeLists.txt  polynom1.cpp  polynom2.cpp  polynom3.cpp  polynom4.cpp  polynom5.cpp  test  test2.cc  test_LS1.cc  test_LS2.cc
lesson6/: CMakeLists.txt  main.cc  mex_minq.cc  minq.m  polynoms.cpp  polynoms.hpp  test.cpp  test1.cpp
lesson6/interface1/: minq.cc  minq.hh
lesson6/rect-1/: rect.m
lesson6/rect-2/: test.cc
lesson6/rect-4/: rect.m  test.m
lesson6/rect-5/: Compile.m  mexRectWrapper.cc  test.m
lesson7/: 10_classes.cc  11_Eigen.cc  12_Eigen.cc  13_Eigen.cc  14_Eigen.cc  1_Eigen.cc  2_link_with_fortran.cc  3_ordina_c.c  4_ordina_c.c  4_partial_specialization.cc  5_bubble_sort_template.cc  5_partial_specialization.cc  7_test_vector2.cc  8_string.cc  TimeMeter.hh  makefile
lesson8/: 3_thread_pthread.cc  4_bvp.cc  4_thread_c++11-ver1.cc  7_thread_c++11-philosophe.cc  CMakeLists-cflags.txt  numberToString.cc
lesson8/GRLIB/: GrObject.hh
lesson9/: Q.m  R.m  mex_bvp2.cc  mex_utils.hh  test.m  test1.m  test2.m
students-projects/Davide_Vignotto-Alessandro_Antonucci-Rubik_Cube/: main.m
students-projects/Manuel_Bolder-Graph_and_algorithms/: mapleGraph.mw  readme.txt
(+92 files in other folders)
