# statdard cmake for c++ 11
cmake_minimum_required(VERSION 3.5)

# project name
project(day3)

# set release mode
set(CMAKE_BUILD_TYPE Release)

# set the standard
set(CMAKE_CXX_STANDARD 17)

# set the source files (all .cc in src folder)
file(GLOB SOURCES "src/*.c*" "thread-pool-unitn/*.cc")

# set the include files (all .h in src/include folder)
file(GLOB INCLUDES "src/include/*.h*" "src/*.h*")


# add the executable (all file *.cc) from the folder src_test
file(GLOB SOURCES_TEST "src_test/*.c*")

# add the executable (all file *.cc) from the folder src_test
file(GLOB INCLUDES_TEST "src_test/*.h*")

include_directories("../../eigen-3.4.0/")
# include_directories("./Third_parties/thread-pool/")
include_directories("thread-pool/include")
include_directories("thread-pool-unitn")


# add the executable
foreach( testsourcefile ${SOURCES_TEST} )
  get_filename_component(testname ${testsourcefile} NAME_WE)
  add_executable( ${testname} ${testsourcefile} ${SOURCES} ${INCLUDES} ${INCLUDES_TEST} )
  target_include_directories(${testname} PUBLIC src/include src_test)
  # target_link_libraries(${testname} gtest gtest_main pthread)
  add_test(NAME ${testname} COMMAND ${testname} )
endforeach()

add_definitions(-DUNITN)
